Fixed gradient background on safari

--- a/src/scss/parts/fields/_repeater.scss
+++ b/src/scss/parts/fields/_repeater.scss
@@ -90,7 +90,7 @@
             bottom: 0;
             right: 0;
             width: s(150);
-            background: linear-gradient(to right, transparent, rgba(white, .8), white);
+            background: linear-gradient(to right, rgba(white, 0), rgba(white, .8), white);
         }
     }
 
